# Gemini-Live-Agent

./: .gitignore  BROWSER_AGENT_TASK_HANDLING.md  INSTALL.md  L1-L4 Error.md  MANIFEST.in  README.md  SCREEN_NAVIGATION_PLAN.md  UI_Navigator.md  __init__.py  agent_prompt.md  browser_agent_prompt.md  cli.py  config.yaml  creative_agent.md  orchestration.md  pyproject.toml  repo_analysis.txt  requirements-dev.txt  requirements.txt  rio_chats.db  rio_patterns.db
cloud/: Dockerfile  README.md  __init__.py  adk_server.py  block_coalescer.py  directive_parser.py  error_classifier.py  evaluation.py  gemini_session.py  main.py  mcp_client.py  mcp_server.py  model_router.py  plan_google.txt  rate_limiter.py  requirements.txt  rio_agent.py  service.yaml  session_manager.py  skill_loader.py  tool_orchestrator.py  trigger_engine.py  voice_plugin.py  workspace_tools.py
data/: .gitkeep
local/: AUDIO_FIX_BRAINSTORM.md  README.md  __init__.py  audio_io.py  browser_agent.py  browser_tools.py  channel_manager.py  chat_store.py  config.py  constants.py  creative_agent.py  main.py  maintenance.py  memory.py  model_fallback.py  notes.txt  notifier.py  ocr.py  orchestrator.py  platform_utils.py  portal_auth.py  profiles.py  push_to_talk.py  requirements.txt  rio_logging.py  screen_capture.py  screen_navigator.py  struggle_detector.py  task_state.py  telegram_bot.py  tools.py  ui_navigator.py  unified_memory.py  user_pattern_model.py  vad.py  wake_word.py  web_tools.py  whatsapp_channel.py  windows_agent.py  ws_client.py
logs/: .gitkeep  README.md
ml/: README.md  __init__.py  ensemble_model.py  feature_engine.py  train.py  user_model_manager.py
modes/: automation.yaml  developer.yaml  researcher.yaml
output/: README.md
rio_profiles/: customer_care_profile.json  tutor_profile.json
setup/: README.md  deploy.sh  run-cloud.bat  run-cloud.sh  run-local.bat  run-local.sh  setup.bat  setup.sh
skills/: customer_care.yaml  tutor.yaml
tasks/: RIO_MASTER_PLAN.md  audio_research_report.md  lessons.md  screen_nav_research.md  skills-plan.md  todo.md
(+34 files in other folders)
